# ST17H6XT_example

./: .gitattributes  .gitignore  README.md
Keil/: README.md
Keil/example/OTA/OTA_internal_flash/Source/: OSAL_ota.c  main.c
Keil/example/OTA/slboot/Source/: main.c  ota.c
Keil/example/ble_central/extBleCentral/: extBleCentral.uvprojx
Keil/example/ble_central/extBleCentral/Source/: extBLECentral.c  extBLECentral.h  main.c
Keil/example/ble_central/sbcMultiConn/: main.c  sbcMultiConn.uvprojx
Keil/example/ble_central/sbcMultiConn/source/: sbc_multi_schedule.h
Keil/example/ble_central/simpleBleCentral/: CMakeLists.txt
Keil/example/ble_multi/simpleBleMultiConnection/: main.c  simpleBleMulti.uvoptx  simpleBleMulti.uvprojx
Keil/example/ble_peripheral/HIDKeyboard/: HIDKeyBoard.uvprojx
Keil/example/ble_peripheral/bleUart_AT/: bleUart_AT.uvprojx
Keil/example/ble_peripheral/bleUart_AT/Source/: bleuart.c  bleuart_at_cmd.h  bleuart_at_dma.c  bleuart_protocol.c  bleuart_protocol.h  bleuart_service.c  led.c  led.h  peripheral.c
Keil/example/ble_peripheral/extBlePeripheral/: extBlePeripheral.uvprojx
Keil/example/ble_peripheral/extBlePeripheral/source/: OSAL_extBlePeripheral.c  extBlePeripheral.c  simpleIBeaconProfile_ota.c
Keil/example/ble_peripheral/pwmLight/: pwmLight.uvprojx
Keil/example/ble_peripheral/pwmLight/Source/: app_wrist.c  wrist_Main.c
Keil/example/ble_peripheral/sbpMultiConn/: sbpMultiConn.uvprojx
Keil/example/ble_peripheral/sbpMultiConn/source/: OSAL_SimpleBLEPeripheral.c  sbpProfile_ota.c
Keil/example/ble_peripheral/simpleBlePeripheral/: main.c  simpleBlePeripheral.uvprojx
Keil/example/ble_peripheral/simpleBlePeripheral/source/: sbpProfile_ota.h  simpleBLEPeripheral.h
Keil/example/peripheral/adc/: adc.uvprojx
Keil/example/peripheral/adc/source/: OSAL_adc.c  Voice_Queue.c  adc_compare_demo.c  adc_compare_demo.h  adc_poilling_demo.c  adc_poilling_demo.h  main.c  voice_circ_buff.h
Keil/example/peripheral/dmac/Source/: main.c
Keil/example/peripheral/fs/: fs.uvprojx
Keil/example/peripheral/fs/source/: main.c
Keil/example/peripheral/i2c/Source/: OSAL_i2c.c  i2c_demo.c  main.c
Keil/example/peripheral/watchdog/source/: main.c  watchdog_demo.c
Keil/example/proprietary_rf/smart_rf/: main.c
bleMesh/: CMakeLists.txt  CMakeLists.txt.gen  README.md  gcc_arm.ld  mesh_light.uvprojx
bleMesh/Source/: OSAL_bleMesh.c  appl_sample_example_phylight.c  bleMesh.c
sdk/: README.md
sdk/components/ble/controller/: ll.h  ll_buf.h  ll_common.h  ll_debug.h  ll_def.h  ll_enc.h  ll_hw_drv.h  rf_phy_driver.h
sdk/components/ble/host/: att_internal.h  gap_internal.h  gatt_internal.h  gattservapp.h  host_cfg.h  l2cap_internal.h  linkdb.h  sm_internal.h
sdk/components/ble/include/: att.h  bcomdef.h  gap.h  gatt.h  l2cap.h
sdk/components/driver/adc/: adc.c  adc.h
sdk/components/driver/clock/: clock.c  clock.h
sdk/components/driver/dma/: dma.c  dma.h
sdk/components/driver/flash/: flash.c  flash.h
sdk/components/driver/gpio/: gpio.c
sdk/components/driver/i2c/: i2c.c  i2c_s.h  i2c_slave.c
sdk/components/driver/key/: key.c
sdk/components/driver/led_light/: led_light.c  led_light.h
sdk/components/driver/log/: log.h
sdk/components/driver/pwm/: pwm.c  pwm.h
sdk/components/driver/pwrmgr/: pwrmgr.c  pwrmgr.h
sdk/components/driver/spi/: spi.c
sdk/components/driver/timer/: timer.c
sdk/components/driver/uart/: uart.c  uart.h
sdk/components/driver/voice/: voice.c  voice.h
sdk/components/ethermind/utils/include/: btypes.h  mpal.h
sdk/components/inc/: bus_dev.h  global_config.h  lib_efuse3.h  mcu_phy_bumbee.h  types.h  version.h
sdk/components/libraries/console/: phy_console.c  phy_console.h
sdk/components/libraries/datetime/: app_datetime.c
sdk/components/libraries/fs/: fs.c  fs.h  fs_test.c
sdk/components/libraries/fs2/: fs.c
sdk/components/osal/include/: OSAL_Tasks.h
sdk/components/osal/snv/: osal_snv.c
sdk/components/profiles/DevInfo/: devinfoservice.c
sdk/components/profiles/GATT/: gattservapp.c
sdk/components/profiles/HID/: hidkbdservice.c
sdk/components/profiles/Roles/: central.c  central.h  gapbondmgr.c  peripheral.c  peripheral.h  peripheralMultiConn.c  peripheralMultiConn.h
sdk/components/profiles/SimpleProfile/: simpleProfile.c  simpleProfile.h
sdk/components/profiles/ancs/: ancs_attr.c
sdk/components/profiles/multiRole/: multi.c  multi.h  multiRoleProfile.c
sdk/components/profiles/ota/: ota_flash.c  ota_protocol.c
sdk/components/profiles/ota_app/: ota_app_service.c
sdk/components/profiles/ppsp/: ppsp_impl.c
sdk/components/profiles/slb/: slb.c
sdk/example/OTA/OTA_internal_flash/: ota_if.uvprojx
sdk/example/OTA/slboot/: slboot.uvprojx
sdk/example/OTA/slboot/Source/: slboot.c
sdk/example/ble_central/extBleCentral/Source/: OSAL_extBLECentral.c  extBLECentral_Test.c
sdk/example/ble_central/sbcMultiConn/source/: sbc_multi_role.h  sbc_multi_schedule.c
sdk/example/ble_central/simpleBleCentral/Source/: OSAL_simpleBLECentral.c  simpleBLECentral.c
sdk/example/ble_mesh/mesh_light/source/: main.c
sdk/example/ble_peripheral/HIDKeyboard/: main.c
sdk/example/ble_peripheral/HIDKeyboard/Source/: hidkbd.c
sdk/example/ble_peripheral/bleUart_AT/Source/: OSAL_bleuart.c  bleuart.h  bleuart_Main.c  bleuart_at_cmd.c  bleuart_at_dma.h  bleuart_service.h  main.c
sdk/example/ble_peripheral/extBlePeripheral/: main.c
sdk/example/ble_peripheral/sbpMultiConn/: main.c
sdk/example/peripheral/dmac/: dmac.uvprojx
sdk/example/proprietary_rf/smart_rf/: smart_rf.asm  smart_rf.uvoptx  smart_rf.uvprojx
sdk/lib/: ble_host.lib  ble_host.strip.lib  phy_font.lib  rf.lib  rf.strip.lib  rf_mst.lib
sdk/misc/: bb_rom_sym_m0.gdbsym  jump_function.h  jump_table.c
simpleBleCentral/: CMakeLists.txt  README.md  gcc_arm.ld  memory.ld  simpleBleCentral.uvprojx  toolchain-arm-none-eabi.cmake  xmake.lua
simpleBleCentral/Source/: OSAL_simpleBLECentral.cpp  main.c  simpleBLECentral.c  simpleBLECentral.cpp  simpleBLECentral.h  simpleBLECentral_Main.c
simpleBleCentral/Source/Include/: allocator.h  simpleBLECentral.h
(+70 files in other folders)
